--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -33,7 +33,7 @@ body {
 }
 
 .btn {
-  @apply uppercase bg-[#fef3f0] text-[15px] font-[800] p-[0.8rem_1.9rem] rounded-[999px] transition-all ease-in duration-[0.2s] hover:bg-[var(--color-light-brown)] cursor-pointer border-none;
+  @apply w-[192px] h-[56px] flex justify-center items-center uppercase bg-[var(--color-light-brown)] text-[15px] font-[800] rounded-[999px] cursor-pointer;
 }
 
 .title {
