complete vide and content of hero section now move to animate the content

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -37,9 +37,9 @@ body {
 }
 
 .title {
-  @apply text-[119px] font-extrabold leading-[138px] uppercase;
+  @apply tracking-tighter text-[119px] font-extrabold leading-[138px] uppercase;
 }
 
 .des {
-  @apply text-[1rem] font-proxima w-[49%] leading-[1.2rem];
+  @apply text-[1rem] font-proxima leading-[1.2rem];
 }
