complete animation of hero-section

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -33,7 +33,7 @@ body {
 }
 
 .btn {
-  @apply w-[192px] h-[56px] flex justify-center items-center uppercase bg-[var(--color-light-brown)] text-[15px] font-[800] rounded-[999px] cursor-pointer;
+  @apply w-[192px] h-[56px] flex justify-center items-center uppercase bg-[var(--color-light-brown)] text-[1rem] font-[800] rounded-[999px] cursor-pointer;
 }
 
 .title {
