animate nav-menu

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -44,6 +44,6 @@ body {
   @apply text-[1rem] font-proxima leading-[1.2rem];
 }
 
-.items {
-  @apply opacity-[1];
+.m-item {
+  @apply cursor-pointer;
 }
