--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -21,6 +21,17 @@
   --font-paragraph: "ProximaNova, sans-serif";
 }
 
+/* Chrome, Safari, Edge (WebKit based browsers) */
+::-webkit-scrollbar {
+  display: none;
+}
+html {
+  /* Firefox */
+  scrollbar-width: none;
+  /* Old Browsers IE/Edge */
+  -ms-overflow-style: none;
+}
+
 html,
 body {
   padding: 0;
@@ -29,7 +40,8 @@ body {
   color: #523122;
   background-color: var(--color-milk);
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
+  width: 100%;
   scroll-behavior: smooth;
 }
 
