--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -43,7 +43,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   position: relative;
 }
 
