working on video-section

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -39,7 +39,7 @@ body {
   box-sizing: border-box;
   color: #523122;
   /* background-color: var(--color-milk); */
-  /* background-color: #222123; */
+  background-color: #222123;
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
